@@ -1,4 +1,4 @@
-/*	$OpenBSD: hostfile.h,v 1.9 2001/06/26 17:27:23 markus Exp $	*/
+/*	$OpenBSD: hostfile.h,v 1.10 2001/12/18 10:04:21 jakob Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -18,9 +18,9 @@ typedef enum {
 	HOST_OK, HOST_NEW, HOST_CHANGED
 }       HostStatus;
 
+int	 hostfile_read_key(char **, u_int *, Key *);
 HostStatus
 check_host_in_hostfile(const char *, const char *, Key *, Key *, int *);
 int	 add_host_to_hostfile(const char *, const char *, Key *);
-int	 auth_rsa_read_key(char **, u_int *, BIGNUM *, BIGNUM *);
 
 #endif
